# comfyui_queue_manager

./: .gitignore  MANIFEST.in  README.md  __init__.py  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-pipeline.yml
src/comfyui_queue_manager/: helpers.py  nodes.py  qm_db.py  qm_options.py  qm_queue.py  qm_queue_hijack.py  qm_server.py  queue_manager.py
src/comfyui_queue_manager/inc/: exceptions.py
src/gui/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json
src/gui/app/: globals.scss  layout.js  page.js
src/gui/components/: Queue.js
src/gui/internals/: config.js  functions.js
tests/: __init__.py  test_comfyui_queue_manager.py
web/: index.js  queue-manager.js
web/.gui/: 404.html  index.html  index.txt
web/.gui/_next/static/chunks/: 63-732581e52c67a63e.js  684.js  766.js  main-3c26ba4d9137498b.js  main-app.js  main.js  webpack-4f847ee49968eb2d.js  webpack-6624992f00d413c5.js  webpack.js
web/.gui/_next/static/chunks/app/: layout-4b7cbafef5317fc4.js  layout-5e34666868c4697f.js  layout.js  page-7297eb6ec65e0d09.js  page-f20a20e5acfd6aa8.js  page.js
web/.gui/_next/static/chunks/pages/: _app.js  _error.js
web/.gui/_next/static/css/: 126.css  449.css  cdff6a79bc16b1d4.css
web/.gui/_next/static/prod/: _buildManifest.js
web/docs/: Workflow Name.md
web/js/: archive.js  config.js  functions.js
web/styles/: manager.css
