[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui_queue_manager"
version = "0.0.1"
description = "An extension supporting more streamlined prompt queue management."
authors = [
  {name = "Edgerunner"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = []
dependencies = [

]

[project.optional-dependencies]
dev = [
    "bump-my-version",
    "coverage",  # testing
    "mypy",  # linting
    "pre-commit", # runs linting on commit
    "pytest",  # testing
    "ruff",  # linting
]

[project.urls]
bugs = "https://github.com/QuietNoise/comfyui_queue_manager/issues"
homepage = "https://github.com/QuietNoise/comfyui_queue_manager"
repository = "https://github.com/QuietNoise/comfyui_queue_manager"


[tool.comfy]
PublisherId = "edgerunner"
DisplayName = "ComfyUI Queue Manager"
Icon = "https://raw.githubusercontent.com/QuietNoise/ComfyUI-Queue-Manager/refs/heads/main/queue-icon.svg"

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.ruff]
# extend-exclude = ["static", "ci/templates"]
line-length = 140
src = ["src", "tests"]
target-version = "py39"

# Add rules to ban exec/eval
[tool.ruff.lint]
select = [
    "S102",  # exec-builtin
    "S307",  # eval-used
    "W293",
    "F",  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
    # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
